--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>JUST A GRID</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <style>
       html, body {
         margin: 0;
